Update make open to work on osx.

--- a/cot4210/exam2/Makefile
+++ b/cot4210/exam2/Makefile
@@ -18,7 +18,11 @@ dvi:
 	#latex ${filename}
 
 open:
+ifeq (${platform},Darwin)
+	open ${filename}.pdf &
+else
 	evince ${filename}.pdf &
+endif
 
 clean:
 	rm -f *.ps *.pdf *.log *.aux *.out *.dvi *.bbl *.blg
